<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_inputpwd"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/login_title_top_margin"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/login_lable_left_margin"
        android:layout_centerVertical="true"
        android:text="@string/login_lablepwd"
        />
    <EditText
        android:id="@+id/pwd"
        android:layout_width="@dimen/edittext_width"
        android:layout_height="@dimen/edittext_height"
        android:layout_toRightOf="@+id/lable"
        android:layout_alignBottom="@id/lable"
        android:inputType="textPassword"
        android:hint="@string/login_lablepwddefault"
        android:background="#55AA2277"
        />

    <TextView
        android:id="@+id/pwderr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/pwd"
        android:layout_below="@+id/pwd"
        android:layout_marginTop="@dimen/login_pwderr_top_margin"
        android:text="@string/login_pwderror"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/login_commit_bottom_margin"
        android:text="@string/btn_commit"
        />
</RelativeLayout>
