<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_add_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/type_add_title_top_margin"
        android:layout_centerHorizontal="true"
        />


        <TextView
            android:id="@+id/lable_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/type_add_name_left_margin"
            android:text="@string/type_add_name"
            />
        <EditText
            android:id="@+id/type_name"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="@dimen/edittext_height"
            android:layout_toRightOf="@+id/lable_name"
            android:layout_alignBottom="@id/lable_name"
            android:hint="@string/edit_hint"
            android:background="#55808080"
            />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/type_add_btn_bottom_margin"
        >

        <TextView
            android:id="@+id/btn_center_align"
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btn_center_align"
            android:layout_marginRight="@dimen/btn_cc_margin"
            android:text="@string/btn_cancel"
            />

        <Button
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btn_center_align"
            android:layout_marginLeft="@dimen/btn_cc_margin"
            android:text="@string/btn_commit"
            />

    </RelativeLayout>
</RelativeLayout>
