<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/set_title_top_margin"
        android:layout_centerHorizontal="true"
        />


        <TextView
            android:id="@+id/lable_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginTop="@dimen/setting_top_margin"
            android:layout_marginRight="@dimen/setting_content_margin"
            android:layout_marginLeft="@dimen/setting_content_margin"
            android:text="@string/setting_content"
            />

    <CheckBox
        android:id="@+id/mode_grabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lable_content"
        android:layout_marginTop="@dimen/setting_top_margin"
        android:layout_marginLeft="@dimen/setting_left_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/mode_grabled"
        android:layout_alignBaseline="@id/mode_grabled"
        android:text="@string/setting_garbled_mode"
        />

        <CheckBox
            android:id="@+id/mode_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mode_grabled"
            android:layout_alignLeft="@id/mode_grabled"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/mode_clear"
            android:layout_alignBaseline="@id/mode_clear"
            android:text="@string/setting_clear_mode"
            />

    <RelativeLayout
        android:id="@+id/layout_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lable_content"
        android:layout_alignLeft="@id/mode_clear"
        android:visibility="visible"
        >
        <NumberPicker
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/num"
            android:layout_centerVertical="true"
            android:text="@string/setting_err_times"
            />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/setting_btn_bottom_margin"
        >

        <TextView
            android:id="@+id/btn_center_align"
            android:layout_width="0px"
            android:layout_height="0px"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/btn_center_align"
            android:layout_marginRight="@dimen/btn_cc_margin"
            android:text="@string/btn_cancel"
            />

        <Button
            android:id="@+id/commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/btn_center_align"
            android:layout_marginLeft="@dimen/btn_cc_margin"
            android:text="@string/btn_commit"
            />

    </RelativeLayout>
</RelativeLayout>
