<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/main_margin_lr"
            android:text="@string/main_add_type"
            />
        <Spinner
            android:id="@+id/type"
            android:layout_width="@dimen/edittext_width"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/main_margin_lr"
            android:text="@string/main_seting"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/toolbar"
        android:background="#808080"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginLeft="@dimen/main_margin_lr"
        android:layout_marginRight="@dimen/main_margin_lr"
        />

    <Button
        android:id="@+id/add_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_alignParentBottom="true"
        android:text="@string/main_add_pwd"
        />
</RelativeLayout>
